tests/kiama/negative/name_errors/L2/11_casename3.ob
MODULE casename;

VAR
    bvar : INTEGER;

BEGIN
    CASE bvar OF
        1 : bvar := 2
      | 3 : bvar := 4
    ELSE
        avar := 5
    END
END casename.
